[gd_scene load_steps=10 format=3 uid="uid://b0a3y4a4sw1bl"]

[ext_resource type="Texture2D" uid="uid://lbv3xj75ht8v" path="res://scenes/game/item/item_atlas.tres" id="2"]
[ext_resource type="Script" path="res://scenes/game/item/pick_up/pickup.gd" id="3"]
[ext_resource type="PackedScene" path="res://scenes/game/sound/sound_queue_3d.tscn" id="4"]
[ext_resource type="AudioStream" uid="uid://ditp5r6ja7nc0" path="res://assets/audio/item_ground_hit.mp3" id="5"]
[ext_resource type="PackedScene" uid="uid://c7qyybqvmlu5y" path="res://scenes/game/gameobjects/interactables/hint_object_interface.tscn" id="5_jf81d"]

[sub_resource type="BoxShape3D" id="2"]

[sub_resource type="Animation" id="5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/HintObjectInterface/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="6"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/HintObjectInterface/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_atr1h"]
_data = {
"RESET": SubResource("5"),
"fade_in": SubResource("6")
}

[node name="Pickup" type="RigidBody3D" node_paths=PackedStringArray("name_plate", "anim_player")]
collision_layer = 2
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
gravity_scale = 3.0
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3")
name_plate = NodePath("CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/TitleLabel")
anim_player = NodePath("CanvasLayer/HintObjectInterface/AnimationPlayer")

[node name="Sprite3D" type="Sprite3D" parent="."]
billboard = 1
double_sided = false
texture = ExtResource("2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("2")

[node name="SoundQueue3D" parent="." instance=ExtResource("4")]
Count = 3

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="SoundQueue3D"]
stream = ExtResource("5")
volume_db = 10.0
bus = &"SoundFX"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HintObjectInterface" parent="CanvasLayer" instance=ExtResource("5_jf81d")]
mouse_filter = 2

[node name="CanvasModulate" parent="CanvasLayer/HintObjectInterface" index="0"]
color = Color(1, 1, 1, 0)

[node name="TitleLabel" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer" index="0"]
text = "item_name"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/HintObjectInterface"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_atr1h")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Pickup_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="CanvasLayer/HintObjectInterface"]
